# movielens-100k-recommender-systems

./: Pipfile  README.md  collaborative-filtering.ipynb  config.yaml  content-based.ipynb  contexual-awareness-recommender.ipynb  evaluation-recommenders.ipynb  hello.py  pyproject.toml  test.libfm
recommender-systems-notebooks/: collaborative-filtering.ipynb
